--- a/BeingSeenApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/aboutusFragment"
+        android:name="com.example.myapplication.ui.aboutus.AboutusFragment"
+        android:label="aboutusfragment"
+        tools:layout="@layout/aboutusfragment" />
 </navigation>
