--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
@@ -18,7 +18,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/pickImage"
         android:layout_width="150dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,12 +58,13 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <EditText
-        android:layout_width="307dp"
-        android:layout_height="45dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="Willow England"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
