--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view.xml
@@ -49,7 +49,7 @@
         android:id="@+id/HyPfExitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Done"
+        android:text="Logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.98"
