--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_interface.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_interface.xml
@@ -19,7 +19,7 @@
 
 
     <Button
-        android:id="@+id/HyPfExitButton"
+        android:id="@+id/HyPfProfileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile"
