--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
@@ -46,10 +46,10 @@
 
 
     <Button
-        android:id="@+id/HyPfExitEditButton"
+        android:id="@+id/HyPfBackEditButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Exit"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.98"
