--- a/BeingSeenApp/app/src/main/res/layout/aboutus.xml
+++ b/BeingSeenApp/app/src/main/res/layout/aboutus.xml
@@ -47,6 +47,8 @@
         android:layout_marginBottom="64dp"
         android:text="Donate Us !"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white"
+        android:textColorHighlight="#00BFA5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
