--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
@@ -58,6 +58,7 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <EditText
+        android:id="@+id/HyPfEditUsername"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -73,6 +74,7 @@
         app:layout_constraintVertical_bias="0.45" />
 
     <EditText
+        android:id="@+id/HyPfEditDesc"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
