--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
@@ -16,7 +16,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/HyPfPfpDisplay"
         android:layout_width="150dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +56,7 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <TextView
+        android:id="@+id/HyPfUnameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,6 +71,7 @@
         />
 
     <TextView
+        android:id="@+id/HyPfUdescDisplay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
