--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/HyPassword" />
 
-    <TextView
+    <EditText
         android:id="@+id/HyPassword"
         android:layout_width="214dp"
         android:layout_height="26dp"
@@ -29,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/HyUsername"
         android:layout_width="215dp"
         android:layout_height="26dp"
