--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
@@ -21,14 +21,14 @@
         android:id="@+id/pickImage"
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/profile"
+        app:layout_constraintVertical_bias="0.1"
         tools:srcCompat="@tools:sample/avatars" />
 
 
@@ -87,5 +87,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <ImageButton
+        android:id="@+id/editIcon"
+        android:layout_width="43dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/editpen"
+        app:layout_constraintBottom_toBottomOf="@+id/pickImage"
+        app:layout_constraintEnd_toEndOf="@+id/pickImage"
+        app:layout_constraintStart_toStartOf="@+id/pickImage"
+        app:layout_constraintTop_toTopOf="@+id/pickImage"
+        app:layout_constraintVertical_bias="0.951"
+        style="?android:attr/borderlessButtonStyle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
