Fix input field upper part not visible issue

--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
@@ -22,7 +22,10 @@
         android:id="@+id/HyPassword"
         android:layout_width="214dp"
         android:layout_height="26dp"
-        android:text="Password"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:background="#00000000"
+        app:passwordToggleEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -33,7 +36,9 @@
         android:id="@+id/HyUsername"
         android:layout_width="215dp"
         android:layout_height="26dp"
-        android:text="Username"
+        android:hint="username"
+        android:inputType="textPersonName"
+        android:background="#00000000"
         app:layout_constraintBottom_toTopOf="@+id/HyPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
