--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
@@ -56,6 +56,7 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <TextView
+        android:id="@+id/DnPfUnameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,6 +71,7 @@
         />
 
     <TextView
+        android:id="@+id/DnPfUdescDisplay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
