--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,27 +19,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/HyPassword" />
 
-    <TextView
+    <EditText
         android:id="@+id/HyPassword"
+        android:background="#00000000"
         android:layout_width="214dp"
         android:layout_height="26dp"
-        android:text="Password"
+        android:hint="Password"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/HyUsername"
+        android:background="#00000000"
         android:layout_width="215dp"
         android:layout_height="26dp"
-        android:text="Username"
+        android:hint="Username"
+        android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/HyPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908" />
+        app:layout_constraintVertical_bias="0.908"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
