--- a/BeingSeenApp/app/src/main/res/layout/activity_main.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_main.xml
@@ -60,8 +60,8 @@
 
     <Button
         android:id="@+id/LoginButton"
-        android:layout_width="75dp"
-        android:layout_height="39dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
