GMTGAN-62-TestFrontendImplementation Completed implemntatino of linking profile frontend with backend :)

--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_edit.xml
@@ -77,7 +77,7 @@
         android:id="@+id/DnPfEditUsername"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Willow England"
+        android:text="Name"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="15dp"
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.55"
-        android:text="Education should help young people discover that change is possible "
+        android:text="Bio"
         android:textSize="15dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
