--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_edit.xml
@@ -62,7 +62,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Willow England"
+        android:text="Name"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="15dp"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.55"
-        android:text="Education should help young people discover that change is possible "
+        android:text="Bio"
         android:textSize="15dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
