--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
@@ -42,6 +42,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/SetGoal"
+        android:layout_width="110dp"
+        android:layout_height="65dp"
+        android:text="Set Donation Goal"
+        android:textSize="12dp"
+        android:gravity="left"
+        android:textAlignment="gravity"
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/HyPfLogoutButton"
