--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_set_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_set_donation_goal.xml
@@ -19,24 +19,25 @@
             android:id="@+id/goalTitle"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
+            android:layout_weight="0.33"
             android:hint="Title of the Goal"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
-            android:textSize="15dp"
-            android:layout_marginTop="80dp"
-            android:layout_weight="0.33"
-            android:layout_centerHorizontal="true"/>
+            android:textSize="15dp" />
+
         <EditText
             android:id="@+id/moneyNeeded"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="120dp"
+            android:layout_weight="0.33"
             android:hint="How much money do I need"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
-            android:textSize="15dp"
-            android:layout_marginTop="120dp"
-            android:layout_weight="0.33"
-            android:layout_centerHorizontal="true"/>
+            android:textSize="15dp" />
     </RelativeLayout>
 
     <Button
