--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
@@ -11,7 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/green"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+        <Button
+            android:id="@+id/delete_donation_goal"
+            android:layout_width="110dp"
+            android:layout_height="65dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="296dp"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="67dp"
+            android:gravity="left"
+            android:text="Delete Donation Goal"
+            android:textAlignment="gravity"
+            android:textSize="12dp" />
 
     </RelativeLayout>
 
