--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_donation.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".HomelessYouthUiFrontend.HyUserProfileViewDonationActivity">
 
+    <Button
+        android:id="@+id/setGoal"
+        android:layout_width="110dp"
+        android:layout_height="65dp"
+        android:gravity="left"
+        android:text="Set Donation Goal"
+        android:textAlignment="gravity"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
+
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -15,6 +30,22 @@
         app:layout_constraintTop_toTopOf="parent"
         >
 
+        <Button
+            android:id="@+id/delete_donation_goal"
+            android:layout_width="110dp"
+            android:layout_height="65dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="296dp"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="67dp"
+            android:gravity="left"
+            android:text="Delete Donation Goal"
+            android:textAlignment="gravity"
+            android:textSize="12dp" />
     </RelativeLayout>
 
     <ImageView
@@ -48,16 +79,16 @@
         android:id="@+id/SetGoal"
         android:layout_width="110dp"
         android:layout_height="65dp"
-        android:text="Set Donation Goal"
-        android:textSize="12dp"
         android:gravity="left"
+        android:text="Set Donation Goal"
         android:textAlignment="gravity"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintVertical_bias="0.1"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
 
 
     <Button
