Added login based on usertype and fixed crashes caused by empty profilepic

--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_balance.xml
@@ -130,7 +130,7 @@
         android:id="@+id/textCreditUnit"
         android:layout_width="122dp"
         android:layout_height="81dp"
-        android:text="Credit(s)"
+        android:text="Credit(s) to spend"
         android:textSize="20dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
