--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
@@ -135,27 +135,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
-                <ImageView
-                    android:id="@+id/imageHyView1"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintVertical_bias="0.1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile"
-                    tools:srcCompat="@tools:sample/avatars" />
+
                 <TextView
+                    android:id="@+id/SetDnAmount1"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:text="20 Credit(s)"
                     android:layout_marginLeft="30dp"
                     android:textSize="30dp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/green"/>
                 <TextView
+                    android:id="@+id/SetReceiver1"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:text="to Abby Smith"
@@ -163,102 +153,7 @@
                     android:layout_marginLeft="30dp"
                     android:textColor="@color/black"/>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-                <ImageView
-                    android:id="@+id/imageHyView2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintVertical_bias="0.1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="10 Credit(s)"
-                    android:layout_marginLeft="30dp"
-                    android:textSize="30dp"
-                    android:textColor="@color/black"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="to Abby Smith"
-                    android:textSize="15dp"
-                    android:layout_marginLeft="30dp"
-                    android:textColor="@color/black"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-                <ImageView
-                    android:id="@+id/imageHyView3"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintVertical_bias="0.1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="50 Credit(s)"
-                    android:layout_marginLeft="30dp"
-                    android:textSize="30dp"
-                    android:textColor="@color/black"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="to Abby Smith"
-                    android:textSize="15dp"
-                    android:layout_marginLeft="30dp"
-                    android:textColor="@color/black"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-                <ImageView
-                    android:id="@+id/imageHyView4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintVertical_bias="0.1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="30 Credit(s)"
-                    android:layout_marginLeft="30dp"
-                    android:textSize="30dp"
-                    android:textColor="@color/black"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="to Abby Smith"
-                    android:textSize="15dp"
-                    android:layout_marginLeft="30dp"
-                    android:textColor="@color/black"/>
-            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
