--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_user_profile_view_donation.xml
@@ -154,7 +154,7 @@
                 android:id="@+id/SetHyAmount1"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:text="20 Credit(s)"
+                android:text="N/A"
                 android:textColor="@color/green"
                 android:layout_marginLeft="30dp"
                 android:textSize="30dp"
@@ -163,7 +163,7 @@
                 android:id="@+id/SetSender1"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:text="to Abby Smith"
+                android:text="to N/A"
                 android:textSize="15dp"
                 android:layout_marginLeft="30dp"
                 android:textColor="@color/black"/>
