--- a/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="110dp"
         android:layout_height="42dp"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/transactions_amount_recycler_item"
@@ -31,6 +32,8 @@
         android:layout_width="155dp"
         android:layout_height="65dp"
         android:text="TextView"
+        android:textColor="#03A9F4"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.195"
