GMTGAN-104 Now donor and homeless can show transaction history from db using the same adapter!!!!!

--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
@@ -119,11 +119,11 @@
         android:id="@+id/dn_donations_recycler_view"
         android:layout_width="410dp"
         android:layout_height="180dp"
-        app:layout_constraintHorizontal_bias="0.62"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.989"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintVertical_bias="0.989" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
