--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
@@ -55,6 +55,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
+    <Button
+        android:id="@+id/donateToSomeone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send a donation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.869" />
+
     <TextView
         android:id="@+id/DnPfUnameDisplay"
         android:layout_width="wrap_content"
