--- a/BeingSeenApp/app/src/main/res/layout/activity_donation_status.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_donation_status.xml
@@ -8,18 +8,30 @@
     tools:context=".AboutUsFrontend.DonationStatus">
 
   <TextView
-      android:id="@+id/dns_status"
+      android:id="@+id/dns_transactionId"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="220dp"
-      android:layout_marginBottom="32dp"
-      android:text="Success ✔"
-      android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="100dp"
+      android:layout_marginEnd="16dp"
+      android:text="TransactionId"
+      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
       android:textColor="@color/black"
-      app:layout_constraintBottom_toTopOf="@+id/dns_info"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+  <TextView
+      android:id="@+id/dns_status"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="100dp"
+      android:text="Transaction Status"
+      android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+      android:textColor="@color/black"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/dns_transactionId" />
 
   <TextView
       android:id="@+id/dns_info"
@@ -28,7 +40,7 @@
       android:layout_marginStart="40dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="40dp"
-      android:text="Your transaction is successfully done"
+      android:text="code: transaction info"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/dns_status" />
