--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
@@ -55,18 +55,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
-    <Button
-        android:id="@+id/donateToSomeone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send a donation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869" />
-
     <TextView
         android:id="@+id/searchNameDisplay"
         android:layout_width="wrap_content"
@@ -125,15 +113,15 @@
         />
 
     <TextView
-        android:id="@+id/dnPfBalance"
-        android:layout_width="200dp"
+        android:id="@+id/textCreditAmount"
+        android:layout_width="122dp"
         android:layout_height="81dp"
-        android:text="N/A"
+        android:text="250"
         android:textSize="70dp"
         android:textColor="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75" />
@@ -142,12 +130,12 @@
         android:id="@+id/textCreditUnit"
         android:layout_width="122dp"
         android:layout_height="81dp"
-        android:text="Credit(s) to give"
+        android:text="Credit(s)"
         android:textSize="20dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.83" />
